Add accesibility labels and fixes on all pages.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
             </div>
         </div>
         <div class="text-center col-12 d-md-block">
-            <a href="shows.html" target="_blank" class="btn btn-primary text-dark" aria-label="View all upcoming shows button">View all upcoming shows</a>
+            <a href="shows.html" target="_blank" class="btn btn-primary text-dark"
+                aria-label="View all upcoming shows button">View all upcoming shows</a>
         </div>
     </section>
 
@@ -259,11 +260,11 @@
         <div class="container p-4 pb-0">
             <div class="mb-4">
                 <a class="btn btn-outline-light btn-floating m-1" href="http://facebook.com" target="_blank"
-                    role="button"><i class="fab fa-facebook-f"></i></a>
+                    role="button" aria-label="Facebook button"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://twitter.com" target="_blank"
-                    role="button"><i class="fab fa-twitter"></i></a>
+                    role="button" aria-label="Twitter button"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://instagram.com" target="_blank"
-                    role="button"><i class="fa-brands fa-instagram"></i></a>
+                    role="button" aria-label="Instagram button"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
 
