--- a/comedians.html
+++ b/comedians.html
@@ -5,54 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time!" />
 
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <link href="assets/css/style.css" rel="stylesheet">
-
     <title>Comedians</title>
 </head>
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/images/gigglyfoxlogo.png" class="d-inline-block align-top" alt="fox logo">
-                The Giggly Fox
-            </a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="assets/images/gigglyfoxlogo.png" class="d-inline-block align-top" alt="fox logo">
+                    The Giggly Fox
+                </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="shows.html" class="nav-link">Shows</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="comedians.html" class="nav-link">Comedians</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navmenu">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="shows.html" class="nav-link">Shows</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="comedians.html" class="nav-link">Comedians</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contact.html" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
-    <!--Header-->
-    <div id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
+    <!--Hero image-->
+    <section id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item c-item active">
                 <img src="assets/images/club1slide.jpg" class="d-block w-100 c-img" alt="First slide">
@@ -84,12 +83,12 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-    </div>
+    </section>
 
     <!--Main title-->
-    <div class="main-title text-white">
+    <section class="main-title text-white">
         <p>Comedians</p>
-    </div>
+    </section>
 
     <!--Comedians pictures and bio-->
     <div class="comedian-container">
@@ -308,14 +307,11 @@
     <div class="newsletter-container">
         <div class="card">
             <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
-            <form action="thankyoupage.html" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                class="validate" novalidate>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" tabindex="-1">
-                </div>
-                <div class="clear"></div>
-                <button name="subscribe" id="mc-embedded-subscribe" class="button" aria-label="Submit"
-                    type="submit">Subscribe me</button>
+            <form action="thankyoupage.html">
+                <input type="email" name="email" class="email" placeholder="Your email" required />
+                <button class="button" aria-label="Submit" type="submit">
+                    Subscribe me
+                </button>
             </form>
         </div>
     </div>
@@ -328,11 +324,11 @@
         <div class="container p-4 pb-0">
             <div class="mb-4">
                 <a class="btn btn-outline-light btn-floating m-1" href="http://facebook.com" target="_blank"
-                    role="button"><i class="fab fa-facebook-f"></i></a>
+                    role="button" aria-label="Facebook button"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://twitter.com" target="_blank"
-                    role="button"><i class="fab fa-twitter"></i></a>
+                    role="button" aria-label="Twitter button"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://instagram.com" target="_blank"
-                    role="button"><i class="fa-brands fa-instagram"></i></a>
+                    role="button" aria-label="Instagram button"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
 
@@ -340,8 +336,10 @@
             © 2023 Copyright:
             <a class="text-white" href="index.html">TheGigglyFox.com</a>
         </div>
-
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
