Add aria label to floating top button on all pages.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
 
     <!--Go to top button-->
-    <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i></a>
+    <a class="gotopbtn" href="#" aria-label="Go to the top button"> <i class="fas fa-arrow-up"></i></a>
 
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
