--- a/shows.html
+++ b/shows.html
@@ -290,7 +290,7 @@
 
 
     <!--Go to top button-->
-    <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i></a>
+    <a class="gotopbtn" href="#" aria-label="Go to the top button"> <i class="fas fa-arrow-up"></i></a>
 
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
