Add new file type images on all pages for performance improvement.

--- a/comedians.html
+++ b/comedians.html
@@ -54,21 +54,21 @@
     <section id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item c-item active">
-                <img src="assets/images/club1slide.jpg" class="d-block w-100 c-img" alt="First slide">
+                <img src="assets/images/club1slide.webp" class="d-block w-100 c-img" alt="First slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club2slide.jpg" class="d-block w-100 c-img" alt="Second slide">
+                <img src="assets/images/club2slide.webp" class="d-block w-100 c-img" alt="Second slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club3slide.jpg" class="d-block w-100 c-img" alt="Third slide">
+                <img src="assets/images/club3slide.webp" class="d-block w-100 c-img" alt="Third slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
@@ -94,7 +94,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic1.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic1.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Max Vayne">
             </div>
             <div class="comedian-bio-container text-center">
@@ -115,7 +115,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic2.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic2.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Preston Harvey">
             </div>
             <div class="comedian-bio-container text-center">
@@ -136,7 +136,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic3.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic3.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Sadie Padler">
             </div>
             <div class="comedian-bio-container text-center">
@@ -158,7 +158,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic4.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic4.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Nadine Cross">
             </div>
             <div class="comedian-bio-container text-center">
@@ -179,7 +179,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic5.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic5.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Ada Wang">
             </div>
             <div class="comedian-bio-container text-center">
@@ -200,7 +200,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic6.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic6.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Gordon Freyman">
             </div>
             <div class="comedian-bio-container text-center">
@@ -222,7 +222,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic7.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic7.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Nathan Dreyk">
             </div>
             <div class="comedian-bio-container text-center">
@@ -243,7 +243,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic8.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Sheeva Palomar">
             </div>
             <div class="comedian-bio-container text-center">
@@ -264,7 +264,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic9.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic9.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Johanna Dark">
             </div>
             <div class="comedian-bio-container text-center">
@@ -286,7 +286,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/comic10.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/comic10.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of Dutch Vanderbinde">
             </div>
             <div class="comedian-bio-container text-center">
