--- a/shows.html
+++ b/shows.html
@@ -54,21 +54,21 @@
     <section id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item c-item active">
-                <img src="assets/images/club1slide.jpg" class="d-block w-100 c-img" alt="First slide">
+                <img src="assets/images/club1slide.webp" class="d-block w-100 c-img" alt="First slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club2slide.jpg" class="d-block w-100 c-img" alt="Second slide">
+                <img src="assets/images/club2slide.webp" class="d-block w-100 c-img" alt="Second slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club3slide.jpg" class="d-block w-100 c-img" alt="Third slide">
+                <img src="assets/images/club3slide.webp" class="d-block w-100 c-img" alt="Third slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
@@ -94,7 +94,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show1.png" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show1.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the first show">
             </div>
             <div class="comedian-bio-container text-center">
@@ -117,7 +117,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show2.png" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show2.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the second show">
             </div>
             <div class="comedian-bio-container text-center">
@@ -140,7 +140,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show3.png" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show3.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the third show">
             </div>
             <div class="comedian-bio-container text-center">
@@ -164,7 +164,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show4.png" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show4.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the fourth show">
             </div>
             <div class="comedian-bio-container text-center">
@@ -186,7 +186,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show5.png" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show5.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the fifth show">
             </div>
             <div class="comedian-bio-container text-center">
@@ -209,7 +209,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show6.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the sixth show">
             </div>
             <div class="comedian-bio-container text-center">
@@ -232,7 +232,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show7.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show7.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the seventh show">
             </div>
             <div class="comedian-bio-container text-center">
@@ -255,7 +255,7 @@
     <div class="comedian-container">
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
-                <img src="assets/images/show8.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                <img src="assets/images/show8.webp" class="img-fluid mx-auto d-block" width="235" height="235"
                     alt="Image of the eigth show">
             </div>
             <div class="comedian-bio-container text-center">
