--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
     <section id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item c-item active">
-                <img src="assets/images/club1slide.jpg" class="d-block w-100 c-img" alt="First slide">
+                <img src="assets/images/club1slide.webp" class="d-block w-100 c-img" alt="First slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club2slide.jpg" class="d-block w-100 c-img" alt="Second slide">
+                <img src="assets/images/club2slide.webp" class="d-block w-100 c-img" alt="Second slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club3slide.jpg" class="d-block w-100 c-img" alt="Third slide">
+                <img src="assets/images/club3slide.webp" class="d-block w-100 c-img" alt="Third slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
@@ -134,32 +134,32 @@
             <div class="row upcoming-shows">
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">FRIDAY | 18th of August</h3>
-                    <img src="assets/images/show1.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/show1.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Poster of comedy show1">
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">SATURDAY | 19th of August</h3>
-                    <img src="assets/images/show2.png" class="img-fluid mx-auto d-block" width="200" height="202"
+                    <img src="assets/images/show2.webp" class="img-fluid mx-auto d-block" width="200" height="202"
                         alt="Poster of comedy show2">
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">SUNDAY | 20th of August</h3>
-                    <img src="assets/images/show3.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/show3.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Poster of comedy show3">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">FRIDAY | 25th of August</h3>
-                    <img src="assets/images/show4.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/show4.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Poster of comedy show4">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">SATURDAY | 26th of August</h3>
-                    <img src="assets/images/show5.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/show5.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Poster of comedy show5">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">SUNDAY | 27th of August</h3>
-                    <img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/show6.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Poster of comedy show6">
                 </div>
             </div>
@@ -192,42 +192,42 @@
             </div>
             <div class="row upcoming-shows">
                 <div class="col-12 col-md-6">
-                    <img src="assets/images/comic1.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic1.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Max Vayne">
                     <h3 class="text-center showname">MAX VAYNE</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="assets/images/comic2.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic2.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Preston Harvey">
                     <h3 class="text-center showname">PRESTON HARVEY</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="assets/images/comic3.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic3.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Sadie Padler">
                     <h3 class="text-center showname">SADIE PADLER</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="assets/images/comic4.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic4.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Nadine Cross">
                     <h3 class="text-center showname">NADINE CROSS</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <img src="assets/images/comic5.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic5.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Ada Wang">
                     <h3 class="text-center showname">ADA WANG</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <img src="assets/images/comic6.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic6.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Gordon Freyman">
                     <h3 class="text-center showname">GORDON FREYMAN</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <img src="assets/images/comic7.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic7.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Nathan Dreyk">
                     <h3 class="text-center showname">NATHAN DREYK</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                    <img src="assets/images/comic8.webp" class="img-fluid mx-auto d-block" width="202" height="202"
                         alt="Image of Sheeva Palomar">
                     <h3 class="text-center showname">SHEEVA PALOMAR</h3>
                 </div>
