--- a/thankyoupage.html
+++ b/thankyoupage.html
@@ -54,21 +54,21 @@
     <section id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item c-item active">
-                <img src="assets/images/club1slide.jpg" class="d-block w-100 c-img" alt="First slide">
+                <img src="assets/images/club1slide.webp" class="d-block w-100 c-img" alt="First slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club2slide.jpg" class="d-block w-100 c-img" alt="Second slide">
+                <img src="assets/images/club2slide.webp" class="d-block w-100 c-img" alt="Second slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="assets/images/club3slide.jpg" class="d-block w-100 c-img" alt="Third slide">
+                <img src="assets/images/club3slide.webp" class="d-block w-100 c-img" alt="Third slide">
                 <div class="carousel-caption">
                     <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
                     <p class="fs-1">Leicester Comedy Club</p>
