Add contactredirect.html to redirect users when submitting a contact form.

--- a/contactredirect.html
+++ b/contactredirect.html
@@ -88,10 +88,9 @@
     <!--Main body-->
     <section>
         <div class="thankyoupage">
-            <h1>Thank you for subscribing!</h1>
-            <p>You are awesome! Cheers for filling that out and choosing to keep up with our updates. Keep being you,
-                you
-                absolute legend!
+            <h1>Hooray! You rocked that contact form!</h1>
+            <p>Our inbox is doing a happy dance in anticipation of your message. Brace yourself for a swift reply, and get ready to
+            have some fun with us!
             </p>
             <a href="index.html">
                 Back to home
