--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/gigglyfoxlogo.png" class="d-inline-block align-top" alt="fox logo">
+                    <img src="assets/images/gigglyfoxlogo.webp" class="d-inline-block align-top" alt="fox logo">
                     The Giggly Fox
                 </a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" aria-label="Navbar button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
