--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
                     The Giggly Fox
                 </a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" aria-label="Navbar button">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"
+                    aria-label="Navbar button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -130,7 +131,9 @@
                                 </div>
                             </div>
                             <div class="col-12 text-area text-center">
-                                <a href="contactredirect.html" target="_blank" class="btn btn-light">Send</a>
+                                <form action="contactredirect.html" method="POST">
+                                        <input type="submit">
+                                </form>
                             </div>
                         </div>
                     </form>
