--- a/404page.html
+++ b/404page.html
@@ -13,7 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
-    <title>Thank you for contacting us!</title>
+    <title>404 error</title>
 </head>
 
 <body>
@@ -88,9 +88,8 @@
     <!--Main body-->
     <section>
         <div class="thankyoupage">
-            <h1>Hooray! You rocked that contact form!</h1>
-            <p>Our inbox is doing a happy dance in anticipation of your message. Brace yourself for a swift reply, and get ready to
-            have some fun with us!
+            <h1>Stay calm and don't freak out!</h1>
+            <p>Unfortunately the page that you were looking for is unavailable! Try visiting our home page and start again from there.
             </p>
             <a href="index.html">
                 Back to home
