Add redirect on submit form button

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-6">
-                    <form action="#">
+                    <form>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
@@ -131,9 +131,7 @@
                                 </div>
                             </div>
                             <div class="col-12 text-area text-center">
-                                <form action="contactredirect.html" method="POST">
-                                        <input type="submit">
-                                </form>
+                            <input type="submit" onclick="location.href='contactredirect.html';" required>
                             </div>
                         </div>
                     </form>
