Add responsiveness screenshot to readme and site overview description.

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-6">
-                    <form>
+                    <form action="contactredirect.html">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
@@ -126,12 +126,12 @@
                             </div>
                             <div class="col-12 text-area">
                                 <div class="form-group">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1"
-                                        placeholder="Insert your text" rows="3" required></textarea>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Insert your text" rows="3"
+                                        required></textarea>
                                 </div>
                             </div>
                             <div class="col-12 text-area text-center">
-                            <input type="submit" onclick="location.href='contactredirect.html';" required>
+                                <input type="submit">
                             </div>
                         </div>
                     </form>
