Add home page content in README.md

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
             <form action="thankyoupage.html">
                 <input type="email" name="email" class="email" placeholder="Your email" required />
-                <button class="button" aria-label="Submit" type="submit">
+                <button class="button" aria-label="Submit button" type="submit">
                     Subscribe me
                 </button>
             </form>
