--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </div>
         <div class="text-center col-12 d-md-block">
             <a href="comedians.html" target="_blank" class="btn btn-primary text-dark"
-                aria-label="View all comedians">View all comedians</button></a>
+                aria-label="View all comedians">View all comedians</a>
         </div>
     </section>
 
