Add validators description to README.md

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time!" />
+        content="Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time!">
 
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -87,9 +87,9 @@
     </section>
 
     <!--Main title-->
-    <section class="main-title text-white">
+    <div class="main-title text-white">
         <p>Contact</p>
-    </section>
+    </div>
 
     <!--Contact form-->
     <section class="row" id="contact">
@@ -151,7 +151,7 @@
         <div class="card">
             <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
             <form action="thankyoupage.html">
-                <input type="email" name="email" class="email" placeholder="Your email" required />
+                <input type="email" name="email" class="email" placeholder="Your email" required>
                 <button class="button" aria-label="Submit button" type="submit">
                     Subscribe me
                 </button>
