--- a/contactredirect.html
+++ b/contactredirect.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time!" />
+        content="Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time!">
 
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
