Add lighthouse scores description to README.md

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9685.993421710033!2d-1.1417809705444755!3d52.63290882657963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4877611f2d96bcb7%3A0x6c216a818f1e4d12!2sCity%20Centre%2C%20Leicester!5e0!3m2!1sen!2suk!4v1691076921390!5m2!1sen!2suk"
                         width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        referrerpolicy="no-referrer-when-downgrade" title="Google Maps Leicester City Centre"></iframe>
                 </div>
                 <div class="col-md-6">
                     <form action="contactredirect.html">
@@ -152,7 +152,7 @@
             <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
             <form action="thankyoupage.html">
                 <input type="email" name="email" class="email" placeholder="Your email" required>
-                <button class="button" aria-label="Submit button" type="submit">
+                <button class="button" aria-label="subscribe button" type="submit">
                     Subscribe me
                 </button>
             </form>
